WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
290619
enumerateDevices does not need to check for device permission
https://bugs.webkit.org/show_bug.cgi?id=290619
Summary
enumerateDevices does not need to check for device permission
youenn fablet
Reported
2025-03-28 05:27:49 PDT
enumerateDevices does not need to check for device permission
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-03-28 05:28:06 PDT
<
rdar://problem/148094614
>
youenn fablet
Comment 2
2025-03-28 05:54:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/43187
EWS
Comment 3
2025-04-01 01:51:50 PDT
Committed
293003@main
(5d898848eda9): <
https://commits.webkit.org/293003@main
> Reviewed commits have been landed. Closing PR #43187 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug