enumerateDevices does not need to check for device permission rdar://148094614 https://bugs.webkit.org/show_bug.cgi?id=290619

Reviewed by Eric Carlson.

Align with the spec and Firefox by not taking into account permissions in the enumeration of devices.
This improves privacy in the case a user decided to grant persistently camera.
We add a runtime flag for safety.

We also add a quirk for Google Meet where we replace deviceId/label from empty string to "default".
And similary in getUserMedia, we remove exact deviceId constraint with "default" value.

Tested on existing websites and covered by added and rebased tests.

* LayoutTests/fast/mediastream/enumerateDevices-camera-denied-expose-with-capture-expected.txt: Added.
* LayoutTests/fast/mediastream/enumerateDevices-camera-denied-expose-with-capture.html: Copied from LayoutTests/fast/mediastream/enumerateDevices-camera-denied.html.
* LayoutTests/fast/mediastream/enumerateDevices-camera-denied.html:
* LayoutTests/fast/mediastream/enumerateDevices-microphone-denied-expose-with-capture-expected.txt: Added.
* LayoutTests/fast/mediastream/enumerateDevices-microphone-denied-expose-with-capture.html: Copied from LayoutTests/fast/mediastream/enumerateDevices-microphone-denied.html.
* LayoutTests/fast/mediastream/enumerateDevices-microphone-denied.html:
* LayoutTests/fast/mediastream/media-devices-enumerate-devices.html:
* LayoutTests/imported/w3c/web-platform-tests/mediacapture-streams/MediaDevices-enumerateDevices-persistent-permission.https-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/mediacapture-streams/MediaDevices-enumerateDevices.https-expected.txt:
* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebCore/Modules/mediastream/MediaDevices.cpp:
(WebCore::shouldEnableEnumerateDeviceQuirk):
(WebCore::createMediaConstraints):
(WebCore::MediaDevices::getUserMedia):
(WebCore::MediaDevices::exposeDevices):
* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::shouldEnableEnumerateDeviceQuirk const):
(WebCore::handleGoogleQuirks):
* Source/WebCore/page/Quirks.h:
* Source/WebCore/page/QuirksData.h:
* Source/WebKit/UIProcess/UserMediaPermissionRequestManagerProxy.cpp:
(WebKit::UserMediaPermissionRequestManagerProxy::computeFilteredDeviceList):

Canonical link: https://commits.webkit.org/293003@main